tests passing on ubuntu

--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -8,6 +8,9 @@
   <key>PlexClientPlatforms</key>
   <string>*</string>
 
+  <key>PlexFrameworkVersion</key>
+  <string>2</string>
+
   <key>PlexPluginCodePolicy</key>
   <string>Elevated</string>
 </dict>
