--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 *.pyc
-.c9revisions
-curl-status-file
-out
-media-server.log
-plex-system.log
-plugin-log
-Contents/Libraries/Shared/ss/tmp/*
-ss.log
 .bundle
+test.log*
